npm bundle working (merge with next comment!)

--- a/ChampionMains.Pyrobot/Views/_newMaster.cshtml
+++ b/ChampionMains.Pyrobot/Views/_newMaster.cshtml
@@ -1,108 +1,195 @@
 ﻿<!DOCTYPE html>
-
-@{
-//    string angularApp = "";
-//    string angularController = "";
-//
-//    if (Page.Angular != null)
-//    {
-//        angularApp = $"ng-app=\"{Page.Angular}\"";
-//        angularController = $"ng-controller=\"MainController\"";
-//    }
-}
-
-@functions
-{
-    MvcHtmlString NoEscape(string s)
-    {
-        return new MvcHtmlString(s);
-    }
-
-}
-
-
-<html lang="en">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>@(Page.Title ?? "/r/ChampionMains Flairs")</title>
+    <title>Material Design Lite Extensions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="~/Content/css/newStyles.scss" />
+    <style>
+        .username {
+            word-break: break-all;
+            font-family: 'PT Sans', 'Roboto', 'Helvetica', 'Arial', sans-serif;
+            font-weight: 700;
+            /* font-size: 29px; */
+        }
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="~/content/css/bootswatch.css">
-    <link rel="stylesheet" href="~/content/css/site.scss">
+        .userpane {
+            background-color: #303030;
+            padding: 16px;
+            max-width: 600px;
+        }
 
-    <!-- favicons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="~/content/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="~/content/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="~/content/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="~/content/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="~/content/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="~/content/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="~/content/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="~/content/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="~/content/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="~/content/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="~/content/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="~/content/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="~/content/icons/favicon-16x16.png">
-    <link rel="manifest" href="~/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="~/content/icons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
-    <!-- scripts -->
-    <script src="~/content/js/ga.js"></script>
-
-    <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
-    @if (Page.Angular != null)
-    {
-        <script src="~/bower_components/angular/angular.min.js"></script>}
-
-    @RenderSection("head", false)
+        .mdl-layout__container {
+            position: static !important;
+        }
+    </style>
 </head>
-<body @NoEscape(angularController)>
-    <div class="container">
-        <div class="row">
-            <header>
-                <div class="col-sm-6">
-                    <h1>/r/ChampionMains Flairs</h1>
-                </div>
-                <div class="col-sm-6">
-                    <nav>
-                        <ul>
-                            @if (User.Identity.IsAuthenticated)
-                            {
-                                <li>
-                                    <a href="@Url.Action("index", "profile")">Profile</a>
-                                </li>
-                                <li>
-                                    @using (Html.BeginForm("logout", "Login"))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <button type="submit">Log Out</button>
-                                    }
-                                </li>
-                            }
-                            <li>
-                                <a href="https://championmains.github.io/Pyrobot/">About <span class="fa fa-external-link-square"></span></a>
-                            </li>
-                            @if (User.IsInRole("admin") || User.IsInRole("moderator"))
-                            {
-                                @*<li>
-                                        <a href="/adminPanel">Admin</a>
-                                    </li>*@
-                            }
-                        </ul>
-                    </nav>
-                </div>
-            </header>
+<body class="mdlext-dark-color-theme mdl-color--grey-900">
+<div class="demo-layout mdl-layout mdl-js-layout">
+    <header class="mdl-layout__header mdl-layout__header--scroll mdl-layout__header--transparent">
+        <div class="mdl-layout__header-row">
+            <!-- Title -->
+            <span class="mdl-layout-title">/r/ChampionMains Flairs</span>
+            <!-- Add spacer, to align navigation to the right -->
+            <div class="mdl-layout-spacer"></div>
+            <!-- Navigation -->
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="">Profile</a>
+                <a class="mdl-navigation__link" href="">Log Out</a>
+                <a class="mdl-navigation__link" href="">About</a>
+            </nav>
         </div>
-
-        @RenderBody()
-
-        <footer class="footer">
-            <p>/r/ChampionMains Flairs  isn't endorsed by Riot Games and doesn't reflect the views or opinions of Riot Games or anyone officially involved in producing or managing League of Legends. League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.</p>
-        </footer>
+    </header>
+    <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Title</span>
+        <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="">Link</a>
+            <a class="mdl-navigation__link" href="">Link</a>
+            <a class="mdl-navigation__link" href="">Link</a>
+            <a class="mdl-navigation__link" href="">Link</a>
+        </nav>
     </div>
+    <div class="demo-overlay mdl-layout__content">
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col mdl-cell--hide-desktop" style="height: calc(80px + 30vw);"></div>
+            <div class="userpane mdl-shadow--2dp mdl-cell mdl-cell--6-col mdl-cell--1-offset-tablet mdl-cell--5-col-desktop mdl-cell--1-offset-desktop mdl-typography--text-center">
+                <div><h3 class="username">/u/Umarrii</h3></div>
+                <!-- YUUUUUSDHSUDHASOUDAS -->
+                <div>
+                    <div style="width: calc(40px + 7vw); font-size: calc(0.34px + 0.059vw); display: inline-block;">
+                        <div style="position: relative; width: 100%; padding-bottom: 125%;">
+                            <div style="background-image: url('~/content/img/masteries/banner6.png'); background-size: 100%; width: 75%; padding-bottom: 75%; background-position: center; background-repeat: no-repeat; position: absolute; left: 12.5%; top: 40%; box-shadow: 0 -8em 8em -1em black;"></div>
+                            <div style="background-image: url('~/content/img/masteries/143.png'); background-size: 107%; background-position: center; background-repeat: no-repeat; border-radius: 100%; position: absolute; width: 78%; padding-bottom: 78%; top: 8%; left: 10%; box-shadow: 0 0 10em 8em black;"></div>
+                            <div style="background-image: url('~/content/img/masteries/circle.png'); background-size: 108.3333%; width: 100%; padding-bottom: 100%; background-position: center; background-repeat: no-repeat; position: absolute;"></div>
+                            <div style="background-image: url('~/content/img/masteries/icon6.png'); background-size: 100%; width: 62.5%; padding-bottom: 55%; background-position: center; background-repeat: no-repeat; position: absolute; left: 18.3333%; top: 59%;"></div>
+                        </div>
+                    </div>
+                    <div style="width: calc(40px + 8vw); font-size: calc(0.34px + 0.068vw); display: inline-block;">
+                        <div style="position: relative; width: 100%; padding-bottom: 125%;">
+                            <div style="background-image: url('~/content/img/masteries/banner7.png'); background-size: 100%; width: 75%; padding-bottom: 75%; background-position: center; background-repeat: no-repeat; position: absolute; left: 12.5%; top: 40%; box-shadow: 0 -8em 8em -1em black;"></div>
+                            <div style="background-image: url('~/content/img/masteries/katarina.png'); background-size: 107%; background-position: center; background-repeat: no-repeat; border-radius: 100%; position: absolute; width: 78%; padding-bottom: 78%; top: 8%; left: 10%; box-shadow: 0 0 10em 8em black;"></div>
+                            <div style="background-image: url('~/content/img/masteries/circle.png'); background-size: 108.3333%; width: 100%; padding-bottom: 100%; background-position: center; background-repeat: no-repeat; position: absolute;"></div>
+                            <div style="background-image: url('~/content/img/masteries/icon7.png'); background-size: 100%; width: 62.5%; padding-bottom: 55%; background-position: center; background-repeat: no-repeat; position: absolute; left: 18.3333%; top: 59%;"></div>
+                        </div>
+                    </div>
+                    <div style="width: calc(40px + 6vw); font-size: calc(0.34px + 0.051vw); display: inline-block;">
+                        <div style="position: relative; width: 100%; padding-bottom: 125%;">
+                            <div style="background-image: url('~/content/img/masteries/banner5.png'); background-size: 100%; width: 75%; padding-bottom: 75%; background-position: center; background-repeat: no-repeat; position: absolute; left: 12.5%; top: 40%; box-shadow: 0 -8em 8em -1em black;"></div>
+                            <div style="background-image: url('~/content/img/masteries/nami.png'); background-size: 107%; background-position: center; background-repeat: no-repeat; border-radius: 100%; position: absolute; width: 78%; padding-bottom: 78%; top: 8%; left: 10%; box-shadow: 0 0 10em 8em black;"></div>
+                            <div style="background-image: url('~/content/img/masteries/circle.png'); background-size: 108.3333%; width: 100%; padding-bottom: 100%; background-position: center; background-repeat: no-repeat; position: absolute;"></div>
+                            <div style="background-image: url('~/content/img/masteries/icon5.png'); background-size: 100%; width: 62.5%; padding-bottom: 55%; background-position: center; background-repeat: no-repeat; position: absolute; left: 18.3333%; top: 59%;"></div>
+                        </div>
+                    </div>
+                    <!-- <div style="position: relative; width: 130px; height: 150px;">
+                        <div style="background-image: url('images/masteries/banner7.png'); width: 90px; height: 90px; background-position: center; background-repeat: no-repeat; position: absolute; left: 20px; top: 60px; box-shadow: 0 -8px 8px -1px black;"></div>
+                        <div style="background-image: url('images/masteries/143.png'); background-size: 100px; background-position: center; background-repeat: no-repeat; border-radius: 100%; position: absolute; width: 94px; height: 94px; top: 17px; left: 17px; box-shadow: 0 0 10px 8px black;"></div>
+                        <div style="background-image: url('images/masteries/circle.png'); width: 130px; height: 130px; background-position: center; background-repeat: no-repeat; position: absolute;"></div>
+                        <div style="background-image: url('images/masteries/icon7.png'); width: 75px; height: 66px; background-position: center; background-repeat: no-repeat; position: absolute; left: 28px; top: 90px;"></div>
+                    </div> -->
+                </div>
+                <div>
+                    <img src="/images/Gold_Emblem.png" style="margin-right: 0.5em; width: calc(50px + 10vw); display: inline-block;" />
+                </div>
+            </div>
+        </div>
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--6-col">
+                <div class="demo-card-square mdl-card mdl-shadow--2dp">
+                    <div class="mdl-card__title mdl-card--expand">
+                        <h2 class="mdl-card__title-text">Update</h2>
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__supporting-text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Aenan convallis.
+                    </div>
+                    <div class="mdl-card__actions mdl-card--border">
+                        <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                            View Updates
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    @RenderBody()
+</div>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+    <script type="text/javascript" src="~/node_modules/material-design-lite/material.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="~/node_modules/mdl-ext/lib/mdl-ext.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="~/node_modules/fitty/dist/fitty.min.js" charset="utf-8"></script>
+    <script>
+    fitty('.username', {
+      minSize: 24,
+      maxSize: 56
+    });
+    </script>
 </body>
 </html>
