--- a/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    Layout = "~/Views/_master.cshtml";
+    Layout = "~/Views/_newMaster.cshtml";
     //Page.Title = "Profile";
     Page.Angular = "Profile";
     ViewBag.Title = "newIndex";
 }
 
-<h2>newIndex</h2>
+@*<h2>newIndex</h2>*@
