--- a/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
+++ b/ChampionMains.Pyrobot/Views/Profile/newIndex.cshtml
@@ -2,8 +2,126 @@
 @{
     Layout = "~/Views/_newMaster.cshtml";
     //Page.Title = "Profile";
-    Page.Angular = "Profile";
+    //    Page.Angular = "Profile";
     ViewBag.Title = "newIndex";
+    Page.HasVue = true;
 }
 
-@*<h2>newIndex</h2>*@
+@section head {
+    <link href="@Url.Content("~/content/css/_vueChampBadge.scss")" rel="stylesheet" type="text/css" />
+}
+
+@section tail {
+    @{ Html.RenderPartial("_vueChampBadge"); }
+    <script src="@Url.Content("~/content/js/vueProfile.js")" type="text/javascript"></script>
+    <script type="text/javascript">
+        fitty('.username', {
+            minSize: 24,
+            maxSize: 56
+        });
+    </script>
+}
+
+<div id="app" class="mdl-grid">
+    <div class="userpane-spacer mdl-cell mdl-cell--12-col mdl-cell--hide-desktop"></div>
+    <div class="userpane mdl-shadow--2dp mdl-cell mdl-cell--6-col mdl-cell--1-offset-tablet mdl-cell--5-col-desktop mdl-cell--1-offset-desktop mdl-typography--text-center">
+        <div><h3 class="username">/u/@User.Identity.Name</h3></div>
+        <!-- YUUUUUSDHSUDHASOUDAS -->
+        <div>
+            <div style="width: calc(40px + 7vw); font-size: calc(3.4px + 0.595vw); display: inline-block;">
+                <champ-badge :champ-data="sortedChampions[1]"></champ-badge>
+            </div>
+            <div style="width: calc(40px + 8vw); font-size: calc(3.4px + 0.680vw); display: inline-block;">
+                <champ-badge :champ-data="sortedChampions[0]"></champ-badge>
+            </div>
+            <div style="width: calc(40px + 6vw); font-size: calc(3.4px + 0.510vw); display: inline-block;">
+                <champ-badge :champ-data="sortedChampions[2]"></champ-badge>
+            </div>
+        </div>
+        <div>
+            <img src="/images/Gold_Emblem.png" style="margin-right: 0.5em; width: calc(50px + 10vw); display: inline-block;" />
+        </div>
+    </div>
+</div>
+<div class="mdl-grid" style="margin-top: 10vw;">
+    <div class="mdl-cell mdl-cell--6-col">
+        <div class="demo-card-square mdl-card mdl-shadow--2dp">
+            <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Update</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__supporting-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Aenan convallis.
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                    View Updates
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
